--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+    "start": "ng serve --proxy-config proxy.conf.json",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
@@ -12,6 +12,7 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "~10.0.0-rc.4",
+    "@angular/cdk": "^9.2.4",
     "@angular/common": "~10.0.0-rc.4",
     "@angular/compiler": "~10.0.0-rc.4",
     "@angular/core": "~10.0.0-rc.4",
@@ -19,6 +20,8 @@
     "@angular/platform-browser": "~10.0.0-rc.4",
     "@angular/platform-browser-dynamic": "~10.0.0-rc.4",
     "@angular/router": "~10.0.0-rc.4",
+    "primeicons": "^4.0.0-rc.2",
+    "primeng": "^9.1.0",
     "rxjs": "~6.5.5",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.3"
